--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-	"name": "mysite-sveltekit",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0-next.90",
-		"@sveltejs/kit": "^1.0.0-next.587",
-		"svelte": "^3.54.0",
-		"vite": "^4.0.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"@fortawesome/free-solid-svg-icons": "^6.5.1",
-		"fontawesome-svelte": "^2.0.1"
-	}
+  "name": "nbdy",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@vueuse/core": "^10.1.2",
+    "marked": "^5.0.1",
+    "marked-gfm-heading-id": "^3.0.3",
+    "marked-mangle": "^1.0.1",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.1.0",
+    "vite": "^4.3.2"
+  }
 }
