--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "nbdy",
+  "name": "portfolio-js",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@vueuse/core": "^10.1.2",
-    "marked": "^5.0.1",
-    "marked-gfm-heading-id": "^3.0.3",
-    "marked-mangle": "^1.0.1",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "^4.3.2"
+    "@next/font": "13.1.6",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "framer-motion": "^9.0.4",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.2.12",
+    "next": "13.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
