--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "mysite-sveltekit",
+	"name": "site",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -8,14 +8,14 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0-next.90",
-		"@sveltejs/kit": "^1.0.0-next.587",
-		"svelte": "^3.54.0",
-		"vite": "^4.0.0"
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"svelte": "^4.2.7",
+		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fortawesome/free-solid-svg-icons": "^6.5.1",
-		"fontawesome-svelte": "^2.0.1"
+		"lucide-svelte": "^0.314.0"
 	}
 }
